Add missing tax.deadlines translation keys for TaxDeadlineReminder component
- Add comprehensive translation keys for tax deadline reminder functionality:
  - Country names: US, UK, Canada, Australia, Ireland
  - Deadline descriptions: Annual Tax Return, FBAR Filing, Q1/Q2 Estimated Tax, Self Assessment, Tax Payment, Personal Tax Return, Self-Employed Filing
  - UI elements: title, selectCountry, statusSummary, urgentDeadlines, upcomingDeadlines, completed
  - Action buttons: exportToCalendar, copyUrgentDeadlines, showCompleted, hideCompleted
  - Status messages: yourTaxDeadlines, selectCountryToView, daysLeft, dueToday, daysAgo, urgent
  - Reminder tips: 4 practical tips for tax deadline management
  - Disclaimer: important notice about deadline accuracy and professional consultation

- Technical implementation:
  - Use structured translation keys: tax.deadlines.{category}.{item}
  - Organize translations by countries, descriptions, and UI elements
  - Maintain consistent terminology across all deadline-related content
  - Support both Chinese and English languages

- User experience:
  - TaxDeadlineReminder component now fully supports language switching
  - All deadline information displays in user's selected language
  - No more translation key not found warnings
  - Consistent translation quality across all tax deadline features

- Fixes:
  - Resolves all 'Translation key not found: tax.deadlines.*' warnings
  - Ensures proper internationalization of tax deadline reminder system
  - Maintains existing functionality while adding complete multilingual support

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3111,5 +3111,47 @@
         "goodInfrastructure": "Good infrastructure"
       }
     }
+  },
+  "deadlines": {
+    "title": "Tax Deadline Reminder",
+    "selectCountry": "Select your nationality country",
+    "statusSummary": "Status Summary",
+    "urgentDeadlines": "Urgent Deadlines",
+    "upcomingDeadlines": "Upcoming Deadlines",
+    "completed": "Completed",
+    "exportToCalendar": "Export to Calendar",
+    "copyUrgentDeadlines": "Copy Urgent Deadlines",
+    "showCompleted": "Show Completed",
+    "hideCompleted": "Hide Completed",
+    "yourTaxDeadlines": "Your Tax Deadlines",
+    "selectCountryToView": "Please select a country to view tax deadlines",
+    "daysLeft": " days left",
+    "dueToday": "Due today",
+    "daysAgo": " days ago",
+    "urgent": "Urgent: Please handle ASAP",
+    "reminderTips": "Reminder Tips",
+    "reminderTip1": "Set calendar reminders 2-4 weeks before each deadline",
+    "reminderTip2": "Consider applying for extensions (US citizens automatically get 2 months extension)",
+    "reminderTip3": "Keep important documents organized throughout the year",
+    "reminderTip4": "Consult tax professionals for complex situations",
+    "disclaimer": "Important Notice",
+    "disclaimerText": "This reminder system provides general tax deadline information. Actual deadlines may vary due to personal circumstances, extension applications, and other factors. Please refer to the latest information from official tax authorities and consult professional tax advisors for complex situations.",
+    "countries": {
+      "us": "United States",
+      "uk": "United Kingdom",
+      "ca": "Canada",
+      "au": "Australia",
+      "ie": "Ireland"
+    },
+    "descriptions": {
+      "annualTaxReturn": "Annual Tax Return",
+      "fbarFiling": "FBAR Filing (Foreign Bank Account)",
+      "q1EstimatedTax": "Q1 Estimated Tax",
+      "q2EstimatedTax": "Q2 Estimated Tax",
+      "selfAssessment": "Self Assessment",
+      "taxPayment": "Tax Payment",
+      "personalTaxReturn": "Personal Tax Return",
+      "selfEmployedFiling": "Self-Employed Filing"
+    }
   }
 } 
