--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -3422,5 +3422,126 @@
       "personalTaxReturn": "个人所得税申报",
       "selfEmployedFiling": "自雇人士申报"
     }
+  },
+  "strategyGuide": {
+    "applicationRequirements": "申请要求",
+    "implementationSteps": "实施步骤",
+    "practicalTips": "实用建议",
+    "strategies": {
+      "nhrPlan": {
+        "requirements": {
+          "0": "2024年1月1日前申请（已截止）",
+          "1": "或符合新的严格条件",
+          "2": "高技能职业（IT、金融、科学等）",
+          "3": "年收入超过€75,000",
+          "4": "在葡萄牙居住超过183天/年",
+          "5": "非过去5年葡萄牙税务居民"
+        },
+        "steps": {
+          "0": "确认是否符合新政策条件",
+          "1": "准备详细的职业和收入证明",
+          "2": "在葡萄牙开设银行账户",
+          "3": "租赁或购买房产",
+          "4": "申请税务号码",
+          "5": "提交NHR申请（如仍符合条件）",
+          "6": "等待批准（通常4-8周）"
+        },
+        "tips": {
+          "0": "2024年后申请条件大幅收紧",
+          "1": "优先考虑其他税务友好国家",
+          "2": "咨询专业税务顾问评估资格",
+          "3": "考虑替代方案如D7签证",
+          "4": "保持外国收入在外国账户"
+        }
+      },
+      "territorialTax": {
+        "requirements": {
+          "0": "选择领土税制国家（泰国、墨西哥、哥斯达黎加等）",
+          "1": "外国收入不汇入当地",
+          "2": "在当地居住超过规定天数",
+          "3": "遵守当地税务申报要求"
+        },
+        "steps": {
+          "0": "选择目标国家并研究税务规定",
+          "1": "申请居留许可或签证",
+          "2": "在当地开设银行账户",
+          "3": "确保收入来源在国外",
+          "4": "定期申报（如需要）",
+          "5": "保持良好记录"
+        },
+        "tips": {
+          "0": "使用国际银行账户",
+          "1": "避免在当地工作",
+          "2": "保持收入来源证明",
+          "3": "咨询当地税务顾问"
+        }
+      },
+      "companyStructure": {
+        "requirements": {
+          "0": "足够的业务规模",
+          "1": "专业法律和税务顾问",
+          "2": "合规的业务结构",
+          "3": "充分的文档记录"
+        },
+        "steps": {
+          "0": "咨询专业税务顾问",
+          "1": "选择合适的司法管辖区",
+          "2": "注册离岸公司",
+          "3": "建立银行账户",
+          "4": "制定业务结构",
+          "5": "确保合规运营"
+        },
+        "tips": {
+          "0": "选择信誉良好的司法管辖区",
+          "1": "保持充分的业务记录",
+          "2": "定期审查合规要求",
+          "3": "避免激进避税策略"
+        }
+      },
+      "digitalNomadVisa": {
+        "requirements": {
+          "0": "远程工作能力",
+          "1": "稳定收入证明",
+          "2": "健康保险",
+          "3": "无犯罪记录证明"
+        },
+        "steps": {
+          "0": "选择目标国家",
+          "1": "准备申请材料",
+          "2": "提交签证申请",
+          "3": "等待审批",
+          "4": "获得签证后入境",
+          "5": "遵守签证条件"
+        },
+        "tips": {
+          "0": "选择税务友好的签证",
+          "1": "了解签证限制条件",
+          "2": "保持收入证明",
+          "3": "定期更新签证"
+        }
+      },
+      "taxTreatyOptimization": {
+        "requirements": {
+          "0": "了解相关税收协定",
+          "1": "满足协定要求",
+          "2": "正确申报和申请",
+          "3": "保持合规记录"
+        },
+        "steps": {
+          "0": "研究相关税收协定",
+          "1": "确认适用条件",
+          "2": "准备申请材料",
+          "3": "提交减免申请",
+          "4": "等待批准",
+          "5": "定期更新申请"
+        },
+        "tips": {
+          "0": "及时了解协定变化",
+          "1": "保持详细记录",
+          "2": "咨询专业顾问",
+          "3": "避免滥用协定"
+        }
+      }
+    }
   }
 } 
