Add missing Japanese translation keys for localNomads and site metadata
- Add missing localNomads translation keys:
  - loadingGlobalMap: 'グローバルノマドマップを読み込み中'
  - discoverGlobalHotspots: '世界中のデジタルノマドホットスポットを発見'

- Add complete site metadata section for Japanese locale:
  - site.title: 'NomadNow - デジタルノマド生活ガイド | 都市探索、税務最適化、コミュニティ接続'
  - site.description: Complete description of NomadNow platform in Japanese
  - site.keywords: Comprehensive list of relevant keywords in Japanese
  - site.ogTitle: 'NomadNow - デジタルノマド生活ガイド'
  - site.ogDescription: Japanese description for social media sharing
  - site.ogAlt: Alt text for social media images
  - site.structuredDataDescription: Description for search engine structured data
  - site.platformDescription: Platform description for organization schema

- Translation quality:
  - Professional and accurate Japanese translations
  - Consistent terminology across all metadata elements
  - Proper Japanese language conventions and formatting
  - SEO-optimized keywords for Japanese market

- Technical implementation:
  - Added keys to existing localNomads section structure
  - Created new site section with complete metadata coverage
  - Maintained JSON structure integrity and proper formatting
  - Ensured all keys match the structure used in English and Chinese locales

This resolves all Japanese translation key warnings and provides complete multilingual support for website metadata and localNomads functionality.

--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -2539,7 +2539,9 @@
     "coffeeHero": "コーヒーヒーロー",
     "nomadExplorer": "ノマドエクスプローラー",
     "communityBuilder": "コミュニティビルダー",
-    "meetupMaster": "ミートアップマスター"
+    "meetupMaster": "ミートアップマスター",
+    "loadingGlobalMap": "グローバルノマドマップを読み込み中",
+    "discoverGlobalHotspots": "世界中のデジタルノマドホットスポットを発見"
   },
   "cityFilters": {
     "nomadCities": "ノマド都市",
@@ -2823,5 +2825,31 @@
       "connected": "つながった",
       "explored": "探索した"
     }
+  },
+  "site": {
+    "title": "NomadNow - デジタルノマド生活ガイド | 都市探索、税務最適化、コミュニティ接続",
+    "description": "NomadNowはデジタルノマドの究極の生活ガイドで、グローバル都市情報、税務最適化アドバイス、コミュニティ接続、実用的なツールを提供します。デジタルノマドに最適な都市を発見し、税務戦略を最適化し、グローバルノマドコミュニティとつながりましょう。",
+    "keywords": [
+      "デジタルノマド",
+      "リモートワーク",
+      "グローバル都市",
+      "税務最適化",
+      "ノマドコミュニティ",
+      "都市探索",
+      "リモートオフィス",
+      "グローバル旅行",
+      "ノマド生活",
+      "都市ランキング",
+      "税務ガイド",
+      "ノマドビザ",
+      "コワーキング",
+      "コーヒーショップ",
+      "生活費"
+    ],
+    "ogTitle": "NomadNow - デジタルノマド生活ガイド",
+    "ogDescription": "デジタルノマドに最適な都市を発見し、税務戦略を最適化し、グローバルノマドコミュニティとつながりましょう。",
+    "ogAlt": "NomadNow - デジタルノマド生活ガイド",
+    "structuredDataDescription": "デジタルノマドの究極の生活ガイドで、グローバル都市情報、税務最適化アドバイス、コミュニティ接続、実用的なツールを提供",
+    "platformDescription": "デジタルノマド生活ガイドプラットフォーム"
   }
 } 
