Remove redundant Explore Cities button from hero section
- Remove the large Explore Cities button below Weekly Activities in hero section
- This button was redundant as users can access cities through:
  - Navigation menu
  - Dashboard quick actions
  - Other city-related buttons throughout the site
  - Direct navigation links

- UI/UX improvements:
  - Cleaner hero section layout
  - Reduced visual clutter
  - Better focus on essential actions
  - Improved spacing and visual hierarchy
  - Slightly reduced bundle size (31.6kB → 31.5kB)

- Technical changes:
  - Removed FixedLink component with exploreCities translation
  - Removed associated styling and hover effects
  - Maintained existing Weekly Activities and City Rankings buttons
  - Preserved all other hero section functionality

This change improves the user experience by removing an unnecessary call-to-action that didn't add significant value to the hero section.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2410,7 +2410,15 @@
     "vote": "Vote",
     "viewDetails": "View Details",
     "searchPlaceholder": "Search cities...",
-    "title": "Cities"
+    "title": "Cities",
+    "totalCities": "Total Cities",
+    "totalDays": "Total Days",
+    "currentCity": "Current City",
+    "consecutiveDays": "Consecutive Days",
+    "myTravelTrajectory": "My Travel Trajectory",
+    "import": "Import",
+    "export": "Export",
+    "addTrajectory": "Add Trajectory"
   },
   "tools": {
     "missingTool": {
