Internationalize place recommendation tags and UI elements
- Add comprehensive translation keys for place recommendation tags:
  - latteArt: '拉花艺术' / 'Latte Art' / 'ラテアート'
  - nearBeach: '海滩附近' / 'Near Beach' / 'ビーチ近く'
  - riverView: '河景' / 'River View' / '川の景色'
  - premiumFacilities: '高端设施' / 'Premium Facilities' / '高級施設'
  - affordablePrice: '价格实惠' / 'Affordable Price' / '手頃な価格'
  - chiangMai: '清迈' / 'Chiang Mai' / 'チェンマイ'
  - historicalBuilding: '历史建筑' / 'Historical Building' / '歴史的建物'
  - elegantEnvironment: '优雅环境' / 'Elegant Environment' / '優雅な環境'
  - stableWifi: 'WiFi稳定' / 'Stable WiFi' / 'WiFi安定'
  - culturalExperience: '文化体验' / 'Cultural Experience' / '文化体験'
  - freeVisit: '免费参观' / 'Free Visit' / '無料見学'
  - influencerSpot: '网红店' / 'Influencer Spot' / 'インフルエンサースポット'
  - communityActivities: '社区活动' / 'Community Activities' / 'コミュニティ活動'

- Add 'goSee' translation key for '去看看' button:
  - English: 'Go See'
  - Chinese: '去看看'
  - Japanese: '見に行く'

- Update hardcoded Chinese tags in data files:
  - citySpecificPlaces.ts: Replace Chinese tags with translation keys
  - placeDataService.ts: Replace Chinese tags with translation keys

- Update UI components to use translation keys:
  - HomePlaceRecommendations.tsx: Use t() for tag display
  - CityPlacesSection.tsx: Use t() for tag display
  - places/page.tsx: Use t() for tag display
  - HomeLocalNomads.tsx: Use t() for 'goSee' button

- Technical implementation:
  - All tags now use recommendationForm.place.suggestedTags.{key} pattern
  - Fallback to original tag if translation not found
  - Maintains backward compatibility with existing data
  - Consistent translation key structure across all languages

- User experience improvements:
  - All place recommendation tags now display in user's selected language
  - 'Go See' button in Hot Cities section is now multilingual
  - Consistent terminology across all place-related features
  - Better accessibility for non-Chinese speaking users

This completes the international

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -108,6 +108,7 @@
     },
     "days": "days",
     "viewDetails": "View Details",
+    "goSee": "Go See",
     "photos": "Photos",
     "recommendedPlacesDescription": "Top places recommended by digital nomads",
     "recommendedPlaces": "Recommended Places",
@@ -1625,7 +1626,20 @@
         "goodFood": "Good Food",
         "goodService": "Good Service",
         "open24Hours": "24 Hours",
-        "petFriendly": "Pet Friendly"
+        "petFriendly": "Pet Friendly",
+        "latteArt": "Latte Art",
+        "nearBeach": "Near Beach",
+        "riverView": "River View",
+        "premiumFacilities": "Premium Facilities",
+        "affordablePrice": "Affordable Price",
+        "chiangMai": "Chiang Mai",
+        "historicalBuilding": "Historical Building",
+        "elegantEnvironment": "Elegant Environment",
+        "stableWifi": "Stable WiFi",
+        "culturalExperience": "Cultural Experience",
+        "freeVisit": "Free Visit",
+        "influencerSpot": "Influencer Spot",
+        "communityActivities": "Community Activities"
       },
       "submitButton": "Submit Recommendation",
       "title": "Recommend a Place"
